<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="5dp"
              android:id="@+id/llACSPIntent">


    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentCopyContainer"
            android:id="@+id/btIntentsCopyContainer"
            android:layout_marginTop="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentCertSource"
            android:id="@+id/textView2"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spIntentsCertificateSource"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <!--
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentCertSourceChain"
            android:id="@+id/cbIntentsUseCertChain"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    -->
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntentsStorageKind"
                android:id="@+id/textView5"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spIntentsStorage"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentInstallCertInContainer"
            android:id="@+id/btIntentsInstallCert"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntentsObjectAlias"
                android:id="@+id/textView6"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etIntentsObjectAlias"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="test"
                android:singleLine="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentBuildChain"
            android:id="@+id/btIntentsBuildChain"
            android:layout_gravity="center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsSignatureAlias"
            android:id="@+id/textView3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIntentsBuildContainerAlias"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="test"
            android:singleLine="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsSignatureData"
            android:id="@+id/textView4"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIntentsDataToSign"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="Security"
            android:singleLine="true"/>
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsSignatureDetached"
            android:id="@+id/cbIntentsDetached"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsSignatureCAdESLong"
            android:id="@+id/cbIntentsCadesLong"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentSignData"
            android:id="@+id/btIntentsSignData"
            android:layout_gravity="center_horizontal"/>
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsVerifyAsDefault"
            android:id="@+id/cbIntentsVerifyAsDefault"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentVerifySignature"
            android:id="@+id/btIntentsVerifySignature"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsContainerType"
            android:id="@+id/textView7"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIntentsContainerType"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:singleLine="true"
            android:text="HDIMAGE"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsContainerAlias"
            android:id="@+id/textView8"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etIntentsGenContainerAlias"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="test"
            android:singleLine="true"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgIntentsKeyAlgorithm"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntentsKeyAlgorithm2001"
                android:id="@+id/rbIntentsKA2001"
                android:checked="true"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntentsKeyAlgorithm2012256"
                android:id="@+id/rbIntentsKA2012256"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/IntentsKeyAlgorithm2012512"
                android:id="@+id/rbIntentsKA2012512"/>
    </RadioGroup>
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsKeyExchange"
            android:id="@+id/cbIntentsExchange"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"/>
    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsCertSelfSigned"
            android:id="@+id/cbIntentsSelfSigned"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:checked="true"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsCAVersion"
            android:id="@+id/textView10"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spIntentsCAVersion"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsCAAddress"
            android:id="@+id/textView9"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spIntentsCAAddress"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IntentsIntentGenerate"
            android:id="@+id/btIntentsGenerate"/>
</LinearLayout>
</ScrollView>