<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/llExamplesMain"
    android:padding="5dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExamplesExampleName"
            android:id="@+id/tvExamplesName"
            android:layout_gravity="top|center_horizontal"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExamplesList"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="top|center_horizontal"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_span="2"
            android:layout_gravity="top|center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExamplesClientName"
            android:id="@+id/tvExamplesClientName"
            android:layout_gravity="top|center_horizontal"
            />
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExamplesClientList"
            android:layout_gravity="top|center_horizontal"
            />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExamplesClientPassword"
            android:id="@+id/tvExamplesClientPassword"
            android:layout_gravity="top|center_horizontal"
            />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etExamplesClientPassword"
            android:inputType="textPassword"
            android:layout_gravity="top|center_horizontal"
            android:singleLine="true"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_span="2"
            android:layout_gravity="top|center_horizontal"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExamplesServerName"
            android:id="@+id/tvExamplesServerName"
            android:layout_gravity="top|center_horizontal"
            />
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spExamplesServerList"
            android:layout_gravity="top|center_horizontal"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_span="2"
            android:layout_gravity="top|center_horizontal"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExamplesExecute"
            android:id="@+id/btExamplesExecute"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_gravity="top|center_horizontal"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_gravity="top|center_horizontal"/>
    <CheckBox android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/ExamplesAuthInstallCACAdES"
              android:id="@+id/cbExamplesInstallCA"
              android:checked="true"/>
</LinearLayout>
</ScrollView>